# flask-api-scaffolding

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  copier.yaml  pyproject.toml
App/: __init__.py.jinja
App/Controllers/: {{module_name}}Controller.py.jinja
App/Database/: Session.py
App/Templates/: Index.html.jinja
database/: session.py
